deploy/data_svc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: data-svc
  labels:
    svc: data-svc
    app: data-svc
    app.openshift.io/runtime: python
spec:
  selector:
    app: data-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: data-svc
    spec:
      containers:
        - name: data-svc
          image: >-
            image-registry.openshift-image-registry.svc:5000/fsi-fraud-detection-xops/data-svc:latest
          imagePullPolicy: Always
