deploy/deploy_archive_svc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: archive-svc
  labels:
    svc: archive-svc
    app: fsi-fraud-detection
    app.openshift.io/runtime: golang
spec:
  selector:
    app: fsi-fraud-detection
  replicas: 1
  template:
    metadata:
      labels:
        app: fsi-fraud-detection
    spec:
      volumes:
        - name: datalake-archive
          persistentVolumeClaim:
            claimName: datalake
      containers:
        - name: archive-svc
          image: >-
            image-registry.openshift-image-registry.svc:5000/fsi-fraud-detection-xops/archive-svc:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: datalake-archive
              mountPath: '/opt/app-root/data'
