deploy/deploy_router_svc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: router-svc
  labels:
    svc: router-svc
    app: fsi-fraud-detection
    app.openshift.io/runtime: golang
spec:
  selector:
    app: fsi-fraud-detection
  replicas: 1
  template:
    metadata:
      labels:
        app: fsi-fraud-detection
    spec:
      containers:
        - name: router-svc
          image: >-
            image-registry.openshift-image-registry.svc:5000/fsi-fraud-detection-xops/router-svc:latest
          imagePullPolicy: Always
